[metadata]
name = pyautosap
version = 0.01
author = LIU YUAN
author_email = Yuan.LIU7@cn.bosch.com
description = Control SAP by python program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.boschdevcloud.com/LYU3CGD4/pyautosap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.6
include_package_data = False